ajoute de templates

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <h2>6. Contact</h2>
     <p>Pour toute question concernant cette politique, contactez-nous à :</p>
     <p><strong>Email :</strong> pythamoua@gmail.com</p>
+
+    <p><strong>NB:</strong> Vous pouvez aussi <a href="delete-account.html">supprimer votre compte</a></p>
   </div>
 </body>
 </html>
